# app/Http/Controllers/Book/BookController.php
@@ -24,6 +24,7 @@ class BookController extends ApiController
         $this->model = $model;
         $this->repository = $repository;
         $this->middleware('auth:api', ['except' => ['getBooks']]);
+        $this->middleware('admin', ['only' => ['getBooksToValidate']]);
     }
 
     /**
@@ -32,7 +33,6 @@ class BookController extends ApiController
      *     summary="Lista todos os livros",
      *     operationId="GetBooks",
      *     tags={"books"},
-     *     security={{"apiToken":{}}},
      *     @OA\Parameter(
      *         name="title",
      *         in="query",
@@ -61,15 +61,6 @@ class BookController extends ApiController
      *         )
      *     ),
      *     @OA\Parameter(
-     *         name="filter",
-     *         in="query",
-     *         description="Filtro de status",
-     *         required=false,
-     *         @OA\Schema(
-     *           type="string"
-     *         )
-     *     ),
-     *     @OA\Parameter(
      *         name="includes",
      *         in="query",
      *         description="Faz o include das relações ",
@@ -87,12 +78,27 @@ class BookController extends ApiController
      */
     public function getBooks(Request $request)
     {
-        if ($request->has('filter') && Auth::user()->is_admin) {
-            $data = $this->repository->findAll();
-            return $this->success($data);
-        }
         $request->merge(['status' => true]);
         return parent::index($request); // TODO: Change the autogenerated stub
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/books/validate",
+     *     summary="Lista todos os livros que precisam ser validados",
+     *     operationId="GetBooksToValidate",
+     *     tags={"books"},
+     *     security={{"apiToken":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="...",
+     *     ),
+     *  )
+     */
+    public function getBooksToValidate()
+    {
+        $data = $this->repository->findAll();
+        return $this->success($data);
     }
 
     /**
